# Amazon-Product-Recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
amazon/: config.py  data_ingestion.py  data_loader.py  rag_chain.py
app/: app.py
data/: Amazon_Reviews.csv
